@@ -39,6 +39,10 @@
 #include <QByteArray>
 #endif
 
+#ifdef CONFIG_LV2_PORT_CHANGE_REQUEST
+#include "lv2_port_change_request.h"
+#endif
+
 // Forward decls.
 class QApplication;
 
@@ -107,6 +111,11 @@ protected:
 	bool port_events();
 #endif
 
+#ifdef CONFIG_LV2_PORT_CHANGE_REQUEST
+	bool port_change_request(padthv1::ParamIndex index);
+	bool port_change_requests();
+#endif
+
 private:
 
 	LV2_URID_Map *m_urid_map;
@@ -160,6 +169,10 @@ private:
 #ifdef CONFIG_LV2_PROGRAMS
 	LV2_Program_Descriptor m_program;
 	QByteArray m_aProgramName;
+#endif
+
+#ifdef CONFIG_LV2_PORT_CHANGE_REQUEST
+	LV2_ControlInputPort_Change_Request *m_port_change_request;
 #endif
 
 	static QApplication *g_qapp_instance;
